fix: 출력 순서 뒤바뀌는 오류 수정